src/objects/Apttus_Config2__OrderPocketAdjustmentLineItem__c.object
<CustomObject>
    <description>Represents a pocket price adjustment to the price of a product/service</description>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAppliesTo__c</fullName>
        <description>Indicates the price field the price adjustment should be applied to.</description>
        <label>Adjustment Applies To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net Price</fullName>
                    <default>true</default>
                    <label>Net Price</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentDate__c</fullName>
        <description>The adjustment date</description>
        <inlineHelpText>The adjustment date</inlineHelpText>
        <label>Adjustment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentReason__c</fullName>
        <description>The adjustment reason</description>
        <inlineHelpText>The adjustment reason</inlineHelpText>
        <label>Adjustment Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentType__c</fullName>
        <description>The price adjustment type</description>
        <label>Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>% Adjustment</fullName>
                </value>
                <value>
                    <fullName>Adjustment Amount</fullName>
                </value>
                <value>
                    <fullName>Adjusted Price</fullName>
                </value>
                <value>
                    <fullName>% Benefit</fullName>
                </value>
                <value>
                    <fullName>Benefit Per Unit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BenefitQuantity__c</fullName>
        <description>The incentive benefit quantity</description>
        <inlineHelpText>The incentive benefit quantity</inlineHelpText>
        <label>Benefit Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CouponCode__c</fullName>
        <description>The incentive coupon code</description>
        <inlineHelpText>The incentive coupon code</inlineHelpText>
        <label>Coupon Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveAdjustmentAmount__c</fullName>
        <description>The incentive benefit amount</description>
        <inlineHelpText>The incentive benefit amount</inlineHelpText>
        <label>Incentive Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveCode__c</fullName>
        <description>The incentive code available to customers to identify the incentive</description>
        <inlineHelpText>The incentive code available to customers to identify the incentive</inlineHelpText>
        <label>Incentive Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive</description>
        <inlineHelpText>ID of the associated incentive</inlineHelpText>
        <label>Incentive</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Order Pocket Adjustment Line Items</relationshipLabel>
        <relationshipName>OrderProcketAdjustmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineItemId__c</fullName>
        <description>ID of the associated order line item</description>
        <inlineHelpText>ID of the associated order line item</inlineHelpText>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Pocket Adjustment Line Items</relationshipLabel>
        <relationshipName>PocketAdjustmentLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineNumber__c</fullName>
        <description>The line number</description>
        <label>Line Number</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LineType__c</fullName>
        <description>The line type</description>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                    <default>true</default>
                    <label>Manual</label>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceRuleEntryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the adjustment rule entry</description>
        <inlineHelpText>ID of the adjustment rule Entry</inlineHelpText>
        <label>Price Rule Entry</label>
        <referenceTo>Apttus_Config2__PriceRuleEntry__c</referenceTo>
        <relationshipLabel>Order Pocket Adjustment Line Items</relationshipLabel>
        <relationshipName>OrderPocketAdjustmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceRuleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the adjustment rule</description>
        <inlineHelpText>ID of the adjustment rule</inlineHelpText>
        <label>Price Rule</label>
        <referenceTo>Apttus_Config2__PriceRule__c</referenceTo>
        <relationshipLabel>Order Pocket Adjustment Line Items</relationshipLabel>
        <relationshipName>OrderPocketAdjustmentLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The user defined type</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rebate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Rebate__PayoutScheduleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated payout schedule</description>
        <inlineHelpText>ID of the associated payout schedule</inlineHelpText>
        <label>Payout Schedule</label>
        <referenceTo>Apttus_Rebate__IncentivePayoutSchedule__c</referenceTo>
        <relationshipLabel>Order Pocket Adjustment Line Items</relationshipLabel>
        <relationshipName>OrderPocketAdjustmentLine_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Pocket Adjustment Line Item</label>
    <nameField>
        <displayFormat>PA-{0000000000}</displayFormat>
        <label>Adjustment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Pocket Adjustment Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>